--- a/Disaster Tweets/Real or Not Disaster Tweets.ipynb
+++ b/Disaster Tweets/Real or Not Disaster Tweets.ipynb
@@ -36,6 +36,7 @@
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
+    "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator\n",
     "\n",
     "from IPython.display import clear_output"
    ]
@@ -2332,9 +2333,7 @@
     "from nltk.tokenize import TweetTokenizer\n",
     "from nltk.corpus import stopwords\n",
     "from nltk import WordNetLemmatizer\n",
-    "import string\n",
-    "\n",
-    "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator"
+    "import string"
    ]
   },
   {
